2006-04-14  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/help.c: Document setdate YYYY-MM-DD-HH-MM-SS format.
	* man/xml-source/amrecover.8.xml: Ditto.

2006-04-14  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/amandad.c: Use %p to printf pointer.

2006-04-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.c: Add update command.

2006-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: log_add(L_WARNING) the output of taper_scan if
			       no valid tape are found.

2006-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Call taper_scan with
		(..., FILE_taperscan_output_callback,outf) arguments.
	* server-src/amtape.c:  Call taper_scan with
		(..., FILE_taperscan_output_callback,stderr) arguments.
	* server-src/taper.c:   Call taper_scan with
		(..., CHAR_taperscan_output_callback, &error_msg) arguments.
	* server-src/taperscan.h(FILE_taperscan_output_callback,
				 CHAR_taperscan_output_callback): Protoype.
	* server-src/taperscan.h(taper_scan): New protoype, remove
	  error_message arg, add taperscan_output_callback and data arg.
	* server-src/taperscan.c(FILE_taperscan_output_callback): Callback
	  that print the msg to it's arg, which is FILE*.
	* server-src/taperscan.c(CHAR_taperscan_output_callback): Callback
	  that append the msg to it's arg, which is char*.
	* server-src/taperscan.c(taper_scan): Fix for new arguments.
	* server-src/taperscan.c(changer_taper_scan): Fix for new arguments.

2006-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Document amandad_path and
					    client_username dumptype option.

2006-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb4-security.c: Increase timeout to 60 seconds.
	* common-src/rsh-security.c: Increase timeout to 60 seconds.
	* common-src/ssh-security.c: Increase timeout to 60 seconds.

2006-04-07  Jean-Louis Martineau <martineau@zmanda.com>