@@ -1,3 +1,6 @@
+2006-04-19  Jean-Louis Martineau <martineau@zmanda.com>
+	* restore-src/amidxtaped.c: Cleanup.
+
 2006-04-14  Jean-Louis Martineau <martineau@zmanda.com>
 	* recover-src/help.c: Document setdate YYYY-MM-DD-HH-MM-SS format.
 	* man/xml-source/amrecover.8.xml: Ditto.
